# plantilla

./: .env.example  .gitignore  1HISTORIAL_FASES1.md  AGENTS.md  AUDITORIA_MASTER.md  DOCUMENTACION_REFACTORIZACION.md  ESTADO_ACTUAL.md  HISTORIAL_FASES.md  INFORME.md  Justfile  MEJORAS_BOILERPLATE.md  README.md  ROADMAP_V4.md  aprender.md  buscar38.md  buscar39.md  buscar40.md  docker-compose.yml  falta.md  semilla.py
.github/workflows/: ci.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  admin_promote.py  backend.db  debug_audit.py  seed_users.py  ver_logs.py
backend/config/: default.toml
backend/logs/: backend.log.2026-02-18  backend.log.2026-02-20
backend/migrations/: 0001_init.sql  0002_add_password_hash.sql  0003_add_role_to_users.sql  0004_create_audit_logs.sql  0005_add_email.sql  0006_add_avatar_url.sql  0007_create_refresh_tokens.sql  0008_create_password_reset_tokens.sql  0009_add_email_verification.sql  0010_create_rbac_tables.sql
backend/src/: error.rs  lib.rs  main.rs  settings.rs
backend/src/api/: middleware.rs
backend/src/api/handlers/: audit.rs  auth.rs  common.rs  dashboard.rs  mod.rs  roles.rs  user.rs  users.rs
backend/src/core/: container.rs  mod.rs  repository.rs
backend/src/core/models/: user.rs
backend/src/core/services/: audit_service.rs  auth_service.rs  mod.rs  role_service.rs  user_service.rs
backend/src/data/: audit_repository.rs  mod.rs  rbac_repository.rs  token_repository.rs  user_repository.rs
backend/src/services/: email.rs
backend/tests/: integration_tests.rs
docs/: ALCANCE_MVP.md  LOGGING.md  SCRIPTS_DOCUMENTATION.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: config.ts  env.d.ts  middleware.ts
frontend/src/components/: AuditTable.astro  LoginForm.astro  LogoutButton.astro  UserForm.astro  UserList.astro
frontend/src/layouts/: Layout.astro
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: 404.astro  500.astro  dashboard-v4.astro  dashboard.astro  forgot-password.astro  index.astro  login.astro  logout.astro  register.astro  reset-password.astro  verify-email.astro
frontend/src/stores/: auth.ts  table.ts  toast.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
frontend/tests/: auth.spec.ts
infra/prod/: Caddyfile  docker-compose.yml  setup_server.sh
infra/scripts/: consultor.py  debug_users.py  ignition.py
scripts/: start-with-logs.sh
scripts/automatizacion/: Bootstrap-Script.py  Bulk-Renamer-Replacer.py  Deep-Work-Logger.py  Ghost-Inspector.py  MASTER_ORCHESTRATOR.py  Polyglot.py  Pruning-Script.py  Shield.py  Snapshot-Script.py  The-Creator.py  The-Transformer.py  Watchdog.py  mas-ideas.md
scripts/automatizacion/auditoria/: Ghost-Inspector.py  ai-assistant.py  code-analyzer.py  performance-profiler.py  refactor-advisor.py
scripts/automatizacion/despliegue/: Bootstrap-Script.py  build-package.sh  deploy_maestro.sh
scripts/automatizacion/monitoreo/: Watchdog.py  auto-scaler.py  health-check.py  (+2 more)
(+66 files in other folders)
