[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Web (El Cerebro)
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Datos y Serialización (El Lenguaje)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base de Datos (La Memoria)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

# Observabilidad (Los Ojos)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilidades (Herramientas)
dotenv = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace"] }