[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Web (El Cerebro)
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }

# Datos y Serialización (El Lenguaje)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base de Datos (La Memoria)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

# Observabilidad (Los Ojos)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilidades (Herramientas)
dotenv = "0.15"
tower-http = { version = "0.5", features = ["cors", "request-id", "trace", "util"] }
argon2 = "0.5.3"
tower-cookies = "0.10"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono = "0.4.43"

# Documentación (Swagger)
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }

# Seguridad (Rate Limiting)
tower_governor = { version = "0.4.2", features = ["axum"] }
governor = "0.6.3"
config = "0.15.19"
async-trait = "0.1.89"

# Exportación CSV
csv = "1.3.0"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
mime = "0.3"
http-body-util = "0.1"
